Should fix Social Links

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
 
 <section id="social">
-		  	<p class="center"><a href="http://facebook.com/cldx3000"><img src="./images/facebook.png" alt="Facebook"></a><a href="http://twitter.com/cldx3000"><img src="./images/twitter.png" alt="Twitter"></a><a href="http://plus.google.com/"><img src="./images/googleplus.png" alt="Google+"></a></p>
+		  	<p class="center"><a href="http://www.facebook.com/cldx3000"><img src="./images/facebook.png" alt="Facebook"></a><a href="http://twitter.com/cldx3000"><img src="./images/twitter.png" alt="Twitter"></a><a href="http://plus.google.com/+JoernKonopka"><img src="./images/googleplus.png" alt="Google+"></a><a href="http://github.com/cldx"><img src="./images/github.png" alt="Github"></a></p>
 </section>
 
 <footer>
