all kinds of things

--- a/index.html
+++ b/index.html
@@ -57,15 +57,13 @@
 <section id="article-wrapper">
 
 <article itemscope itemtype="http://schema.org/BlogPosting">
-	<section>
-	<p style="float:left"><img src="./images/spidey_texting.png" /></p>
+	<p class="center"><img class="section-image intro-image" src="./images/spidey_texting.png" /></p>
 	<h1 itemprop="name">Hi there,</h1>
+	<section>
 	<p>I am Joern, an Independent Pencil and Digital Artist, trying to master the unknown realms of an online creator life.</p>	
 	<p>I believe i got into Comics like any other Kid, one day i was looking for stuff to spend my little money on, during that time a new Superman was published in Germany, i was lost for the Art of Funnybooks ever since.</p>
 	<p>These days i create my own little Universe in my Images and Comics and i hope for you to escape and get lost in it just like i do myself.</p>
 	<p>I do lose Illustrations and Drawings whenever i feel like, so scroll on to check those below.</p>
-	
-
 	</section>
 
 </article>
@@ -247,7 +245,7 @@
 </div>
 <section id="vita-wrapper">
 	<article itemscope itemtype="http://schema.org/BlogPosting">
-	<p class="center"><img src="./images/joern.jpeg"></p>	
+	<p class="center"><img class="section-image vita-image" src="./images/joern.jpeg"></p>	
 	<h1 itemprop="name">Who again?</h1>
 	<section>
 	<p>Joern Konopka is an independent Pencil and Digital Artist, father of two, lover of wife, fan of Dr.Who, addict of Coffee and digester of Bakery.</p>
@@ -268,12 +266,20 @@
 
 
 <section id="social">
-		  	<p class="center"><a href="http://www.facebook.com/cldx3000"><img src="./images/facebook.png" alt="Facebook"></a><a href="http://twitter.com/cldx3000"><img src="./images/twitter.png" alt="Twitter"></a><a href="http://plus.google.com/+JoernKonopka"><img src="./images/googleplus.png" alt="Google+"></a><a href="http://github.com/cldx"><img src="./images/github.png" alt="Github"></a></p>
+	<p class="center">
+		<a href="http://www.facebook.com/cldx3000"><img class="social-link" src="./images/facebook.png" alt="Facebook"></a>
+		<a href="http://twitter.com/cldx3000"><img class="social-link" src="./images/twitter.png" alt="Twitter"></a>
+		<a href="http://plus.google.com/+JoernKonopka"><img class="social-link" src="./images/googleplus.png" alt="Google+"></a>
+		<a href="http://github.com/cldx"><img class="social-link" src="./images/github.png" alt="Github"></a>
+	</p>
 </section>
 
 <footer>
-	  	<p class="center">&copy; 2015 Joern Konopka - All rights reserved | <a href="/legal">Legal Disclaimer</a></p>
+  	<p class="center">
+		&copy; 2015 Joern Konopka - All rights reserved | <a href="/legal">Legal Disclaimer</a>
+	</p>
 </footer>
+
 </div>
 </body>
 </html>
