new images and whatnot

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 </div>
 <section id="sketchbook-wrapper">
 
-<section class="album-header"><h1>Pencil</h1></section>
+<section class="album-header"><h1>Pencils & Inks</h1></section>
+
 <section>
 <div class="tilerow">
 <div class="tilespot">
@@ -88,7 +89,7 @@
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Pencil_2"><a href="http://lh5.ggpht.com/-PyIDUJ-Mqes/ThQ8YQRLz0I/AAAAAAAADpo/A76uEuAcVww/19145_288161608964_535668964_3357866_5664691_s.jpg"><img src="http://lh5.ggpht.com/-PyIDUJ-Mqes/ThQ8YQRLz0I/AAAAAAAADpo/A76uEuAcVww/s144-c/19145_288161608964_535668964_3357866_5664691_s.jpg" alt="An Image"></a></div>
+<div class="tile" id="Pencil_2"><a href="./artwork/pencil/GunDamn.jpg"><img src="./artwork/pencil/GunDamn_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
@@ -124,16 +125,75 @@
 </div>
 </div>
 
-<div class="tilespot"></div>
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Pencil_8"><a href="./artwork/pencil/ghibli_chihiro.png"><img src="./artwork/pencil/ghibli_chihiro_thumb.png" alt="An Image"></a></div>
 </div>
-</section><section class="album-header"><h1>Color</h1></section>
-<section>
+</div>
+</div>
+
 <div class="tilerow">
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Color_1"><a href="http://lh5.ggpht.com/--7FkRSkEaSE/ThQ9qormYfI/AAAAAAAADpg/wXQuBc-TpIY/Animal_Instincts_colored_by_cldx.jpg"><img src="http://lh5.ggpht.com/--7FkRSkEaSE/ThQ9qormYfI/AAAAAAAADpg/wXQuBc-TpIY/s144-c/Animal_Instincts_colored_by_cldx.jpg" alt="An Image"></a></div>
+<div class="tile" id="Pencil_9"><a href="./artwork/pencil/ghibli_howls.png"><img src="./artwork/pencil/ghibli_howls_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
+
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Pencil_10"><a href="./artwork/pencil/ghibli_kiki.png"><img src="./artwork/pencil/ghibli_kiki_thumb.png" alt="An Image"></a></div>
+</div>
+</div>
+
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Pencil_11"><a href="./artwork/pencil/ghibli_mononoke.png"><img src="./artwork/pencil/ghibli_mononoke_thumb.png" alt="An Image"></a></div>
+</div>
+</div>
+
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Pencil_12"><a href="./artwork/pencil/ghibli_totoro.png"><img src="./artwork/pencil/ghibli_totoro_thumb.png" alt="An Image"></a></div>
+</div>
+</div>
+</div>
+
+<div class="tilerow">
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Pencil_13"><a href="./artwork/pencil/peter_capaldi.png"><img src="./artwork/pencil/peter_capaldi_thumb.png" alt="An Image"></a></div>
+</div>
+</div>
+
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Pencil_14"><a href="./artwork/pencil/scarlett_johannsen_sepia.png"><img src="./artwork/pencil/scarlett_johannsen_sepia_thumb.png" alt="An Image"></a></div>
+</div>
+</div>
+
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Pencil_15"><a href="./artwork/pencil/taylor_swift.png"><img src="./artwork/pencil/taylor_swift_thumb.png" alt="An Image"></a></div>
+</div>
+</div>
+
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Pencil_16"><a href="./artwork/pencil/spock.png"><img src="./artwork/pencil/spock_thumb.png" alt="An Image"></a></div>
+</div>
+</div>
+</div>
+</section>
+
+<section class="album-header"><h1>Color & Illustration</h1></section>
+
+<section>
+	<div class="tilerow">
+		<div class="tilespot">
+			<div class="spot">
+				<div class="tile" id="Color_1"><a href="http://lh5.ggpht.com/--7FkRSkEaSE/ThQ9qormYfI/AAAAAAAADpg/wXQuBc-TpIY/Animal_Instincts_colored_by_cldx.jpg"><img src="http://lh5.ggpht.com/--7FkRSkEaSE/ThQ9qormYfI/AAAAAAAADpg/wXQuBc-TpIY/s144-c/Animal_Instincts_colored_by_cldx.jpg" alt="An Image"></a></div>
+			</div>
+		</div>
 
 <div class="tilespot">
 <div class="spot">
@@ -154,6 +214,7 @@
 </div>
 
 </div>
+
 <div class="tilerow">
 <div class="tilespot">
 <div class="spot">
@@ -167,28 +228,65 @@
 </div>
 </div>
 
-<div class="tilespot"></div>
-<div class="tilespot"></div>
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Color_7"><a href="./artwork/color/captain_america.png"><img src="./artwork/color/captain_america_thumb.png" alt="An Image"></a></div>
 </div>
-</section><section class="album-header"><h1>Illustration</h1></section>
-<section>
+</div>
+
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Color_8"><a href="./artwork/color/flash.png"><img src="./artwork/color/flash_thumb.png" alt="An Image"></a></div>
+</div>
+</div>
+
+</div>
 <div class="tilerow">
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Illustration_1"><a href="http://lh4.ggpht.com/-L-bxELDrPIs/ThQ8dF2b4OI/AAAAAAAADq0/8lcMMmRK41E/73840_467348313964_535668964_5553908_1874457_s.jpg"><img src="http://lh4.ggpht.com/-L-bxELDrPIs/ThQ8dF2b4OI/AAAAAAAADq0/8lcMMmRK41E/s144-c/73840_467348313964_535668964_5553908_1874457_s.jpg" alt="An Image"></a></div>
+<div class="tile" id="Color_9"><a href="./artwork/color/hitgirl_colored.png"><img src="./artwork/color/hitgirl_colored_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Illustration_2"><a href="http://lh3.ggpht.com/-fws4HvPukZs/ThQ8eBgWU1I/AAAAAAAADq0/Nvx1DplULe4/149102_468852563964_535668964_5575579_1558653_s.jpg"><img src="http://lh3.ggpht.com/-fws4HvPukZs/ThQ8eBgWU1I/AAAAAAAADq0/Nvx1DplULe4/s144-c/149102_468852563964_535668964_5575579_1558653_s.jpg" alt="An Image"></a></div>
+<div class="tile" id="Color_10"><a href="./artwork/color/korra_water.png"><img src="./artwork/color/korra_water_thumb.png" alt="An Image"></a></div>
+</div>
+</div>
+
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Color_11"><a href="./artwork/color/rebel-girl.png"><img src="./artwork/color/rebel-girl_thumb.png" alt="An Image"></a></div>
+</div>
+</div>
+
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Color_12"><a href="./artwork/color/tuxedo_mask.png"><img src="./artwork/color/tuxedo_mask_thumb.png" alt="An Image"></a></div>
+</div>
+</div>
+
+</div>
+<div class="tilerow">
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Color_13"><a href="http://lh4.ggpht.com/-L-bxELDrPIs/ThQ8dF2b4OI/AAAAAAAADq0/8lcMMmRK41E/73840_467348313964_535668964_5553908_1874457_s.jpg"><img src="http://lh4.ggpht.com/-L-bxELDrPIs/ThQ8dF2b4OI/AAAAAAAADq0/8lcMMmRK41E/s144-c/73840_467348313964_535668964_5553908_1874457_s.jpg" alt="An Image"></a></div>
+</div>
+</div>
+
+<div class="tilespot">
+<div class="spot">
+<div class="tile" id="Color_14"><a href="http://lh3.ggpht.com/-fws4HvPukZs/ThQ8eBgWU1I/AAAAAAAADq0/Nvx1DplULe4/149102_468852563964_535668964_5575579_1558653_s.jpg"><img src="http://lh3.ggpht.com/-fws4HvPukZs/ThQ8eBgWU1I/AAAAAAAADq0/Nvx1DplULe4/s144-c/149102_468852563964_535668964_5575579_1558653_s.jpg" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot"></div>
 <div class="tilespot"></div>
 </div>
-</section><section class="album-header"><h1>Miscellaneous</h1></section>
+
+</section>
+
+<section class="album-header"><h1>Miscellaneous</h1></section>
 <section>
 <div class="tilerow">
 <div class="tilespot">
