Added a blank legal.html

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 <footer>
   	<p class="center">
-		&copy; 2016/17 Joern Konopka - All rights reserved | <a href="/legal">Legal Disclaimer</a>
+		&copy; 2016/17 Joern Konopka - All rights reserved | <a href="legal.html">Legal Disclaimer</a>
 	</p>
 </footer>
 
