Darkbox Changes, minor shit

--- a/index.html
+++ b/index.html
@@ -28,14 +28,19 @@
 <body>
 	
 <div class="darkbox">
+	<div class="closeBox"></div>
+
 	<div class="container-wrapper">
-		<div class="previous"></div>
 		<div class="container">
 			<div class="imageBox"></div>
 		</div>
-		<div class="next"></div>
 	</div>
-<div class="closeBox"></div>
+
+	<div class="navigation-wrapper">
+		<div class="previous"></div>
+		<div class="next"></div>
+
+	</div>
 </div>
 
 <div id="bg"></div>
@@ -206,7 +211,7 @@
 
 <footer>
   	<p class="center">
-		&copy; 2016/17 Joern Konopka - All rights reserved | <a href="legal.html">Legal Disclaimer</a>
+		&copy; 2016 / 17 Joern Konopka, All rights reserved. All Characters and Registered Trademarks are the Property of their respective Owners. | <a href="legal.html">Legal Disclaimer</a>
 	</p>
 </footer>
 
