sure, kill me css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html itemscope itemtype="http://schema.org/WebSite">
 <head>
 <meta http-equiv="Content-Type" content="text/html;  charset=UTF-8" />
-<meta name="viewport" content="width=device-width" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="author" content="Joern Konopka">
 
 <meta itemprop="name" content="Joern Konopka">
