first new header

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<div class="bg-image" style="background-image:url(./images/robin_header.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/mononoke_header.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/mugen_header.png);"></div>
-	<div class="bg-image" style="background-image:url(./images/taylor_header.png);"></div>
+	<div class="bg-image" style="background-image:url(./images/scarlett_header.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/summertime_header.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/link_header.png);"></div>
 </div>
