more header updates

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 	<div class="bg-image" style="background-image:url(./images/mononoke_header.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/mugen_header.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/scarlett_header.png);"></div>
-	<div class="bg-image" style="background-image:url(./images/summertime_header.png);"></div>
-	<div class="bg-image" style="background-image:url(./images/link_header.png);"></div>
+	<div class="bg-image" style="background-image:url(./images/batgirl_header.png);"></div>
+	<div class="bg-image" style="background-image:url(./images/elektra_header.png);"></div>
 </div>
 
 <div id="content-wrapper">
