more header updates 2

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div id="slideshow">
 	<div class="bg-image" style="background-image:url(./images/pepper_carrot_header.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/robin_header.png);"></div>
-	<div class="bg-image" style="background-image:url(./images/mononoke_header.png);"></div>
+	<div class="bg-image" style="background-image:url(./images/jyn_header.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/mugen_header.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/scarlett_header.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/batgirl_header.png);"></div>
