--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
 <link rel="apple-touch-icon" href="./images/icon.png" />
-
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 <link rel="stylesheet" type ="text/css" media="screen" href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic' />
 <link rel="stylesheet" type ="text/css" media="screen" href="./styles/reset.css" /> 
 <link rel="stylesheet" type ="text/css" media="screen" href="./styles/base.css" />
