more header stuff

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
 <link rel="apple-touch-icon" href="./images/icon.png" />
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
-<link rel="stylesheet" type ="text/css" media="screen" href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic' />
 <link rel="stylesheet" type ="text/css" media="screen" href="./styles/reset.css" /> 
 <link rel="stylesheet" type ="text/css" media="screen" href="./styles/base.css" />
 
@@ -45,6 +44,7 @@
 
 <div id="bg"></div>
 <div id="slideshow">
+	<div class="bg-image" style="background-image:url(./images/new_header2017.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/pepper_carrot_header.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/robin_header.png);"></div>
 	<div class="bg-image" style="background-image:url(./images/jyn_header.png);"></div>
@@ -202,7 +202,7 @@
 
 <section id="social">
 	<p class="center">
-		<a href="http://www.facebook.com/cldx3000"><img class="social-link" src="./images/facebook.png" alt="Facebook"></a>
+		<a href="https://www.facebook.com/JoernKonopka"><img class="social-link" src="./images/facebook.png" alt="Facebook Page"></a>
 		<a href="http://twitter.com/cldx3000"><img class="social-link" src="./images/twitter.png" alt="Twitter"></a>
 		<a href="http://plus.google.com/+JoernKonopka"><img class="social-link" src="./images/googleplus.png" alt="Google+"></a>
 		<a href="http://github.com/cldx"><img class="social-link" src="./images/github.png" alt="Github"></a>
