--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <section id="article-wrapper">
 
 <article itemscope itemtype="http://schema.org/BlogPosting">
-	<p class="center"><img class="section-image intro-image" src="./images/spidey_texting.png" /></p>
+	<p class="center"><img class="section-image intro-image" src="./images/joern_ava.png" /></p>
 	<h1 itemprop="name">Hi there,</h1>
 	<section>
 	<p>M Name is Jörn and i'm a Pencil and Digital Artist from Germany.</p>	
@@ -90,8 +90,6 @@
 </div>
 <section id="sketchbook-wrapper">
 
-<section>
-<div class="tilerow">
 <div class="tilespot">
 <div class="spot">
 <div class="tile" id="Portfolio_1"><a href="./artwork/batgirl_co.png"><img src="./artwork/batgirl_co_thumb.png" alt="An Image"></a></div>
@@ -115,9 +113,7 @@
 <div class="tile" id="Portfolio_3"><a href="./artwork/mugen.jpe"><img src="./artwork/mugen_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
-</div>
 
-<div class="tilerow">
 <div class="tilespot">
 <div class="spot">
 <div class="tile" id="Pencil_9"><a href="./artwork/hansolo_sketch.png"><img src="./artwork/hansolo_thumb.png" alt="An Image"></a></div>
@@ -141,9 +137,7 @@
 <div class="tile" id="Pencil_12"><a href="./artwork/jubilee.png"><img src="./artwork/jubilee_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
-</div>
 
-<div class="tilerow">
 <div class="tilespot">
 <div class="spot">
 <div class="tile" id="Pencil_13"><a href="./artwork/pepper_carrot_colored.png"><img src="./artwork/pepper_carrot_colored_thumb.png" alt="An Image"></a></div>
@@ -167,8 +161,8 @@
 <div class="tile" id="Pencil_16"><a href="./artwork/flash_inks.jpg"><img src="./artwork/flash_inks_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
-</div>
-</section>
+
+<div class="spacer" style="clear:both;"></div>
 
 </section>
 
