fixes, fixes EVERYWHERE!

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<p class="center"><img class="section-image intro-image" src="./images/joern_ava.png" /></p>
 	<h1 itemprop="name">Hi there,</h1>
 	<section>
-	<p>M Name is Jörn and i'm a Pencil and Digital Artist from Germany.</p>	
+	<p>My Name is Jörn and i'm a Pencil and Digital Artist from Germany.</p>	
 	<p>I believe i got into Comics like any other Kid, one day i was looking for stuff to spend my little money on, during that time a new Superman was published in Germany, i was lost for the Art of Funnybooks ever since.</p>
 	<p>These days i create my own little Universe in my Images and Comics and i hope for you to escape and get lost in it just like i do myself.</p>
 	<p>I do lose Illustrations and Drawings whenever i feel like, so scroll on to check those below.</p>
@@ -196,10 +196,10 @@
 
 <section id="social">
 	<p class="center">
-		<a href="https://www.facebook.com/JoernKonopka"><img class="social-link" src="./images/facebook.png" alt="Facebook Page"></a>
-		<a href="http://twitter.com/cldx3000"><img class="social-link" src="./images/twitter.png" alt="Twitter"></a>
-		<a href="http://plus.google.com/+JoernKonopka"><img class="social-link" src="./images/googleplus.png" alt="Google+"></a>
-		<a href="http://github.com/cldx"><img class="social-link" src="./images/github.png" alt="Github"></a>
+		<a href="https://www.facebook.com/JoernKonopka" target="_blank"><img class="social-link" src="./images/facebook.png" alt="Facebook Page"></a>
+		<a href="https://twitter.com/cldx3000" target="_blank"><img class="social-link" src="./images/twitter.png" alt="Twitter"></a>
+		<a href="https://instagram.com/cldx3000" target="_blank"><img class="social-link" src="./images/instagram.png" alt="Github"></a>
+		<a href="https://plus.google.com/+JoernKonopka" target="_blank"><img class="social-link" src="./images/googleplus.png" alt="Google+"></a>
 	</p>
 </section>
 
