--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
 <link rel="apple-touch-icon" href="./images/icon.png" />
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <link rel="stylesheet" type ="text/css" media="screen" href="./styles/reset.css" /> 
 <link rel="stylesheet" type ="text/css" media="screen" href="./styles/base.css" />
 
