migrating stuff to desktop PC

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
 <link rel="apple-touch-icon" href="./images/icon.png" />
-<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <link rel="stylesheet" type ="text/css" media="screen" href="./styles/reset.css" /> 
 <link rel="stylesheet" type ="text/css" media="screen" href="./styles/base.css" />
@@ -56,7 +55,9 @@
 </div>
 
 <div id="content-wrapper">
+
 <header>		
+
 	<h1>Jörn Konopka</h1>
 </header>
 
@@ -67,16 +68,14 @@
 	<div class="right"> </div>
 </div>
 
-
 <section id="article-wrapper">
-
 <article itemscope itemtype="http://schema.org/BlogPosting">
 	<p class="center"><img class="section-image intro-image" src="./images/joern_ava.png" /></p>
 	<h1 itemprop="name">Hi there,</h1>
 	<section>
 	<p>My Name is Jörn and i'm a Pencil and Digital Artist from Germany.</p>	
 	<p>I believe i got into Comics like any other Kid, one day i was looking for stuff to spend my little money on, during that time a new Superman was published in Germany, i was lost for the Art of Funnybooks ever since.</p>
-	<p>These days i create my own little Universe in my Images and Comics and i hope for you to escape and get lost in it just like i do myself.</p>
+	<p>When i'm not drawing, i like watching Documentaries about Countries, Star Trek TNG and Anime or i listen to Studio Ghibli Soundtracks and unhealthy amounts of Pop and Rap Music.</p>
 	<p>I do lose Illustrations and Drawings whenever i feel like, so scroll on to check those below.</p>
 	</section>
 
@@ -176,11 +175,14 @@
 <section id="vita-wrapper">
 	<article itemscope itemtype="http://schema.org/BlogPosting">
 	<p class="center"><img class="section-image vita-image" src="./images/joern.jpeg"></p>	
-	<h1 itemprop="name">Who again?</h1>
+	<h1 itemprop="name">How may i help you?</h1>
 	<section>
-	<p>Jörn Konopka is an independent Pencil and Digital Artist, father of two, lover of wife, fan of Dr.Who, addict of Coffee and digester of Bakery.</p>
-	<p>If he's not drawing he likes watching Documentaries about Countries, Star Trek TNG and Anime or he listens to Studio Ghibli Soundtracks and unhealthy amounts of Pop and Rap Music.</p>
-	<p>Obviously he enjoys talking about himself in the third person just a little bit too much.</p>
+	<h2>Services</h2>
+	<ul>
+		<li><a href="legal.html">Comic Commissions</a></li>
+		<li><a href="legal.html">Legal Disclaimer</a></li>
+	</ul>
+	<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 	</section>
 </article>
 
@@ -206,7 +208,7 @@
 
 <footer>
   	<p class="center">
-		&copy; 2016 / 17 Joern Konopka, All rights reserved. All Characters and Registered Trademarks are the Property of their respective Owners. | <a href="legal.html">Legal Disclaimer</a>
+		&copy; 2017 Joern Konopka, All rights reserved. All Characters and Registered Trademarks are the Property of their respective Owners.
 	</p>
 </footer>
 
