--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <article itemscope itemtype="http://schema.org/BlogPosting">
 	<p class="center"><img class="section-image intro-image" src="./images/joern_ava.png" /></p>
 	<h1 itemprop="name">Hi there,</h1>
-	<section>
+	<section class="columned">
 	<p>My Name is Jörn and i'm a Pencil and Digital Artist from Germany.</p>	
 	<p>I believe i got into Comics like any other Kid, one day i was looking for stuff to spend my little money on, during that time a new Superman was published in Germany, i was lost for the Art of Funnybooks ever since.</p>
 	<p>When i'm not drawing, i like watching Documentaries about Countries, Star Trek TNG and Anime or i listen to Studio Ghibli Soundtracks and unhealthy amounts of Pop and Rap Music.</p>
@@ -178,15 +178,19 @@
 	<article itemscope itemtype="http://schema.org/BlogPosting">
 	<p class="center"><img class="section-image vita-image" src="./images/joern.jpeg"></p>	
 	<h1 itemprop="name">How may i help you?</h1>
-	<section>
-	<h2>Services</h2>
+	<section class="columned">
+	<h3>Stuff i do</h3>
 	<ul>
-		<li><a href="legal.html">Comic Commissions</a></li>
-		<li><a href="legal.html">Portrait Commissions</a></li>
-		<li><a href="legal.html">Legal Disclaimer</a></li>
+		<li>Commissions with Comic Characters</li>
+		<li>Portrait Commissions</li>
 	</ul>
+
 	<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-	</section>
+
+
+	
+</section>
+
 </article>
 
 </section>
@@ -210,9 +214,7 @@
 </section>
 
 <footer>
-  	<p class="center">
-		&copy; 2017 Joern Konopka, All rights reserved. All Characters and Registered Trademarks are the Property of their respective Owners.
-	</p>
+	<p class="center">&copy; 2017 Joern Konopka, All rights reserved. | <a href="legal.html">Contact Info & Disclaimer</a></p>
 </footer>
 
 </div>
