--- a/legal.html
+++ b/legal.html
@@ -1,6 +1,172 @@
-<html>
-<head></head>
+<!DOCTYPE HTML>
+<html itemscope itemtype="http://schema.org/WebSite">
+<head>
+<meta http-equiv="Content-Type" content="text/html;  charset=UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="author" content="Joern Konopka">
+
+<meta itemprop="name" content="Joern Konopka">
+<meta itemprop="image" content="./images/icon.png">
+<meta itemprop="description" content="Pencils and Illustrations for your distraction">
+
+<link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
+<link rel="apple-touch-icon" href="./images/icon.png" />
+
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+<link rel="stylesheet" type ="text/css" media="screen" href="./styles/reset.css" /> 
+<link rel="stylesheet" type ="text/css" media="screen" href="./styles/base.css" />
+
+<!-- <script type="text/javascript" src="http://platform.twitter.com/anywhere.js?id=JdZzTOwSz3nC6KUZm0E9Q&amp;v=1"></script> --> 
+<!-- <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script> -->
+
+<script type="text/javascript" src="./scripts/modernizr-latest.js"></script>	
+<script type="text/javascript" src="./scripts/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="./scripts/home.js"></script>
+
+<title>Jörn Konopka - Pencils and Illustrations for your distraction</title>
+</head>
+
 <body>
-<h1>Sorry this is still empty</h1>
+	
+<div id="bg"></div>
+<div id="slideshow">
+	<div class="bg-image" style="background-image:url(./images/new_header2017.png);"></div>
+	<div class="bg-image" style="background-image:url(./images/pepper_carrot_header.png);"></div>
+	<div class="bg-image" style="background-image:url(./images/robin_header.png);"></div>
+	<div class="bg-image" style="background-image:url(./images/jyn_header.png);"></div>
+	<div class="bg-image" style="background-image:url(./images/mugen_header.png);"></div>
+	<div class="bg-image" style="background-image:url(./images/scarlett_header.png);"></div>
+	<div class="bg-image" style="background-image:url(./images/batgirl_header.png);"></div>
+	<div class="bg-image" style="background-image:url(./images/elektra_header.png);"></div>
+</div>
+
+<div id="content-wrapper">
+
+<header>		
+
+	<h1>Legalese & Disclaimer</h1>
+</header>
+
+<div id="content-top-wrapper">
+	<div class="left"> </div>
+	<div class="top-left"></div>
+	<div class="top-right"></div>
+	<div class="right"> </div>
+</div>
+
+<section id="article-wrapper">
+<article itemscope itemtype="http://schema.org/BlogPosting">
+
+
+	<p><a href="index.html">&#8672; Back to Main Site</a></p>
+
+	
+
+	<p class="center"><img class="section-image intro-image" src="./images/joern_ava.png" /></p>
+	<h1 itemprop="name">Contact Info</h1>
+	<section>
+	<ul>
+		<li>Jörn Konopka</li>
+		<li>Alte Mainzer Str 20</li>
+		<li>55129 Mainz</li>
+		<li>Deutschland/Germany</li>
+	</ul>
+
+	<ul>
+		<li>Phone: [gotta check if mandatory]</li>
+		<li>Email: [gotta check if mandatory]</li>
+		<li>USt. wird nicht ausgewiesen, da der Verkäufer Kleinunternehmer im Sinne des UStG ist.</li>
+		<li>VAT Info needed???</li>
+	</ul>
+
+	<div style="clear:both;"></div>
+
+	<p class="center"><a href="#en">English</a> | <a href="#de">Deutsch</a></p>
+
+	<hr />
+
+	<h2 id="en">Disclaimer [EN]</h2>
+
+	<h3>Liability</h3>
+	<p>Despite careful content control, i cannot take responsibility for the content of external links. Responsibility for the content of linked websites is solely with the operator of this website.<p>
+
+	<h3>Copyright</h3>
+
+	<p>Jörn Konopka owns the rights to all texts, pictures, graphics, sounds, animations or videos presented on the cldx.github.io website or related social media channels. Some of the content may be under copyright by third parties. All Characters and Registered Trademarks used within Fan Art are the Property of their respective Owners. Usage of the afore mentioned context on services provided by 3rd parties, with the exception for the purpose of promoting this Website and/or related Social Media Channels, requires the explicit consent of the rightful owner. The content of my website is not allowed to be copied, changed or shared with third parties for commercial purpose.</p>
+
+	<h3>Privacy</h3>
+	
+	<p>My Website currently doesn't use any Cookies or other tracking utilities. Neither do i use any Advertisement or Analytic Products that might track your visit. I'm collecting private data like Adress, Phone Number or Links to social profiles, purely to contact you. None of the data will be passed on to any third party. Data that is provided to me via a third party is covered by the liability of aforementioned third party. </p>
+	<hr />
+
+	<h2 id="de">Haftungsausschluss [DE]</h2>
+
+	<h3>Inhalte</h3>
+
+	<p> Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von
+
+Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen. </p>
+
+	<h3>Links</h3>
+
+	<p> Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben.
+
+Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten
+
+Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum
+
+Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der
+
+Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen. </p>
+
+	<h3>Urheberrecht</h3>
+
+	<p> Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet.
+
+Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine
+
+Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen. </p>
+
+	<h3>Privatssphäre & persönliche Daten</h3>
+
+	<p>Momentan nutzt diese Website weder Cookies, noch irgendwelche zusätzliche Analyse- oder Tracking-Tools. Sollte sich dies in Zukunft ändern wird diese Sektion dementsprechend überarbeitet. Die Speicherung von persönlichen Daten wie Adresse, Telefonnummer oder Links zu sozialen Profilen dient lediglich der Korrespondenz und wird nicht an Dritte weitergegeben soweit ich Einfluss darauf nehmen kann. Für persönliche Daten die auf Drittservern gespeichert werden um sie mir zur Verfügung zu stellen haftet der jeweilige Dienstanbieter.</p>
+	</section>
+
+	<hr />
+
+	<p class="center"><a href="index.html">Back to Main Site</a></p>
+
+</article>
+</section>
+
+
+<div id="content-bottom-wrapper">
+	<div class="left"></div>
+	<div class="bottom-left"></div>
+	<div class="bottom-right"></div>
+	<div class="right"></div>
+</div>
+
+
+
+<section id="social">
+	<p class="center">
+		<a href="https://www.facebook.com/JoernKonopka" target="_blank"><img class="social-link" src="./images/facebook.png" alt="Facebook Page"></a>
+		<a href="https://twitter.com/cldx3000" target="_blank"><img class="social-link" src="./images/twitter.png" alt="Twitter"></a>
+		<a href="https://instagram.com/cldx3000" target="_blank"><img class="social-link" src="./images/instagram.png" alt="Github"></a>
+		<a href="https://plus.google.com/+JoernKonopka" target="_blank"><img class="social-link" src="./images/googleplus.png" alt="Google+"></a>
+	</p>
+</section>
+
+<footer>
+  	<p class="center">
+		&copy; 2017 Joern Konopka, All rights reserved. All Characters and Registered Trademarks are the Property of their respective Owners.
+	</p>
+</footer>
+
+</div>
 </body>
 </html>
+<?
+//EOF
+?>
