Social Icons updated, some style changes

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 		<li>Portrait Commissions</li>
 	</ul>
 
-	<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+	<p>Lorem ipsum dolor sit amet,<a href="index.html">Testlink</a> consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 
 
 	
@@ -206,10 +206,11 @@
 
 <section id="social">
 	<p class="center">
-		<a href="https://www.facebook.com/JoernKonopka" target="_blank"><img class="social-link" src="./images/facebook.png" alt="Facebook Page"></a>
-		<a href="https://twitter.com/cldx3000" target="_blank"><img class="social-link" src="./images/twitter.png" alt="Twitter"></a>
-		<a href="https://instagram.com/cldx3000" target="_blank"><img class="social-link" src="./images/instagram.png" alt="Github"></a>
-		<a href="https://plus.google.com/+JoernKonopka" target="_blank"><img class="social-link" src="./images/googleplus.png" alt="Google+"></a>
+		<a href="https://www.facebook.com/JoernKonopka" title="Facebook Page" target="_blank"><img class="social-link" src="./images/social-facebook.png" alt="Facebook Page"></a>
+		<a href="https://twitter.com/cldx3000" title="Twitter" target="_blank"><img class="social-link" src="./images/social-twitter.png" alt="Twitter"></a>
+		<a href="https://instagram.com/cldx3000" title="Instagram" target="_blank"><img class="social-link" src="./images/social-instagram.png" alt="Instagram"></a>
+		<a href="https://plus.google.com/+JoernKonopka" title="Google Plus" target="_blank"><img class="social-link" src="./images/social-gplus.png" alt="Google+"></a>
+		<a href="https://paypal.me/JoernKonopka" title="Donate on PayPal" target="_blank"><img class="long social-link" src="./images/paypal_customcolor.png" alt="PayPal"></a>
 	</p>
 </section>
 
